<resources>
    <string name="app_name">Mascotas WS</string>
    <string name="nombre">Nombre</string>
    <string name="titulo">Mis Mascotas</string>
    <string name="foto">IDFoto</string>
    <string name="contador">Rating</string>
    <string name="favorito">Favoritos</string>
    <string name="contacto">Contacto</string>
    <string name="acercade">Acerca de</string>
    <string name="nombre_contacto">Nombre de Contacto</string>
    <string name="email">Correo Electronico</string>
    <string name="from">Correo Electronico quien envia</string>
    <string name="password">Contraseña</string>
    <string name="mensaje">Escriba su Mensaje...</string>
    <string name="btnEnviar">Enviar Comentarios</string>
    <string name="btnGuardar">Guardar Cuenta</string>
    <string name="configCta">Configurar Cuenta</string>
    <string name="usuario">Escribe tu Usuario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
