<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.fanygtz.mascotasws.ContactoActivity">

    <include
        android:id="@+id/myActionBar"
        layout="@layout/actionbar"
        >
    </include>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myActionBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutFrom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_contacto"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutContacto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tieMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mensaje"
            android:lines ="4"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEnviar"
        android:theme="@style/MiBotonRaised"
        android:layout_below="@+id/layoutMensaje"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
